# newprintf

./: CMakeLists.txt  README.md  _printf.c  c  function.c  main.c  main.h  main.h.gch  printf.c  printf_binary.c  printf_char.c  printf_int.c  printf_string.c  test
